--- a/contact.html
+++ b/contact.html
@@ -122,8 +122,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">PORTAL<span class="fa fa-angle-down"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="">Student Portal</a></li>                
-              <li><a href="">Staff Portal</a></li>               
+              <li><a href="under-construction.html">Student Portal</a></li>                
+              <li><a href="under-construction.html">Staff Portal</a></li>               
             </ul>
           </li>              
           <li><a href="contact.html">CONTACT</a></li>
@@ -178,7 +178,7 @@
           <!-- start title -->
           <div class="mu-title">
             <h2>Get in Touch</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ut laboriosam corporis doloribus, officia, accusamus illo nam tempore totam alias!</p>
+            <p>Get in touch with us to get the lates on what Stedmak College has to offer to help you scale various academic heights of your choosing! Talk to our staff in the various convinient ways Stedmak College has provide to find out what we have to offer for!</p>
           </div>
           <!-- end title -->
           <!-- start contact content -->
