--- a/blog-single.html
+++ b/blog-single.html
@@ -123,8 +123,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">PORTAL<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="">Student Portal</a></li>                
-                <li><a href="">Staff Portal</a></li>                 
+                <li><a href="under-construction.html">Student Portal</a></li>                
+                <li><a href="under-construction.html">Staff Portal</a></li>                 
               </ul>
             </li>           
             <li><a href="contact.html">CONTACT</a></li>
